fixed middle align button

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1,12 +1,3 @@
-// body {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   margin: 0;
-//   padding: 20px;
-//   font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
-// }
-
 body {
   background-color: #FFCCCC;
   font-family: 'Spirax', cursive;
@@ -14,6 +5,22 @@ body {
 
 header {
   font-size: 3em;
+}
+
+button {
+  width: 100px;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  background-color: sandybrown;
+  border: none;
+  border-radius: 12px;
+  padding: 15px;
+  font-size: 0.8rem;
+}
+
+button:hover {
+  background-color: brown
 }
 
 .container {
